creacion de nuevas interfaces

--- a/src/app/cuenta/login/login.component.html
+++ b/src/app/cuenta/login/login.component.html
@@ -34,8 +34,8 @@
                                         </div>
                                         <!-- Caja de ingreso-->
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                            <a class="small" href="auth-password-basic.html">¿Has olvidado tu contraseña?</a>
-                                            <a class="btn btn-primary" href="dashboard-1.html">Ingreso</a>
+                                            <a class="small" href="/recuperacion">¿Has olvidado tu contraseña?</a>
+                                            <a class="btn btn-primary" href="/navbar">Ingreso</a>
                                         </div>
                                     </form>
                                 </div>
@@ -53,7 +53,7 @@
             <footer class="footer-admin mt-auto footer-dark">
                 <div class="container-xl px-4">
                     <div class="row">
-                        <div class="col-md-6 small">Derechos de Autor © Your Website 2024</div>
+                        <div class="col-md-6 small">Derechos de Autor © Tu Website 2024</div>
                         <div class="col-md-6 text-md-end small">
                             <a href="#!">Política de Privacidad</a>
                             ·
