--- a/src/app/cuenta/recuperarcontra/recuperarcontra.component.html
+++ b/src/app/cuenta/recuperarcontra/recuperarcontra.component.html
@@ -6,25 +6,25 @@
                     <div class="col-lg-5">
                         <!-- Basic forgot password form-->
                         <div class="card shadow-lg border-0 rounded-lg mt-5">
-                            <div class="card-header justify-content-center"><h3 class="fw-light my-4">Password Recovery</h3></div>
+                            <div class="card-header justify-content-center"><h3 class="fw-light my-4">Recuperación de Contraseña</h3></div>
                             <div class="card-body">
-                                <div class="small mb-3 text-muted">Enter your email address and we will send you a link to reset your password.</div>
+                                <div class="small mb-3 text-muted">Ingresa tu dirección de correo electrónico y te enviaremos un enlace para restablecer tu contraseña.</div>
                                 <!-- Forgot password form-->
                                 <form>
                                     <!-- Form Group (email address)-->
                                     <div class="mb-3">
-                                        <label class="small mb-1" for="inputEmailAddress">Email</label>
-                                        <input class="form-control" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Enter email address" />
+                                        <label class="small mb-1" for="inputEmailAddress">Correo</label>
+                                        <input class="form-control" id="inputEmailAddress" type="email" aria-describedby="emailHelp" placeholder="Ingresa tu correo" />
                                     </div>
                                     <!-- Form Group (submit options)-->
                                     <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                        <a class="small" href="auth-login-basic.html">Return to login</a>
-                                        <a class="btn btn-primary" href="auth-login-basic.html">Reset Password</a>
+                                        <a class="small" href="/login">Volver al inicio de sesión</a>
+                                        <a class="btn btn-primary" href="/paginarecuperacion">Restablecer Contraseña</a>
                                     </div>
                                 </form>
                             </div>
                             <div class="card-footer text-center">
-                                <div class="small"><a href="auth-register-basic.html">Need an account? Sign up!</a></div>
+                                <div class="small"><a href="/registro">¿Necesitas una cuenta? ¡Regístrate!</a></div>
                             </div>
                         </div>
                     </div>
