--- a/src/app/cuenta/recuperarcontra/recuperarcontra.component.html
+++ b/src/app/cuenta/recuperarcontra/recuperarcontra.component.html
@@ -33,7 +33,7 @@
         </main>
     </div>
     <div id="layoutAuthentication_footer">
-        <footer class="footer-admin mt-auto footer-dark">
+        <footer class="footer-admin mt-auto footer-light">
             <div class="container-xl px-4">
                 <div class="row">
                     <div class="col-md-6 small">Copyright © Your Website 2021</div>
