--- a/src/app/cuenta/login/login.component.html
+++ b/src/app/cuenta/login/login.component.html
@@ -35,7 +35,7 @@
                                         <!-- Caja de ingreso-->
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <a class="small" href="/recuperacion">¿Has olvidado tu contraseña?</a>
-                                            <a class="btn btn-primary" href="/navbar">Ingreso</a>
+                                            <a class="btn btn-primary" href="/dashboardP">Ingreso</a>
                                         </div>
                                     </form>
                                 </div>
@@ -50,7 +50,7 @@
             </main>
         </div>
         <div id="layoutAuthentication_footer">
-            <footer class="footer-admin mt-auto footer-dark">
+            <footer class="footer-admin mt-auto footer-light">
                 <div class="container-xl px-4">
                     <div class="row">
                         <div class="col-md-6 small">Derechos de Autor © Tu Website 2024</div>
