--- a/src/app/cuenta/registro/registro.component.html
+++ b/src/app/cuenta/registro/registro.component.html
@@ -56,7 +56,7 @@
                                             </div>
                                         </div>
                                         <!-- Crear Cuenta-->
-                                        <a class="btn btn-primary btn-block" href="/navbar">Crear
+                                        <a class="btn btn-primary btn-block" href="/encuesta">Crear
                                             Cuenta</a>
                                     </form>
                                 </div>
@@ -71,7 +71,7 @@
             </main>
         </div>
         <div id="layoutAuthentication_footer">
-            <footer class="footer-admin mt-auto footer-dark">
+            <footer class="footer-admin mt-auto footer-light">
                 <div class="container-xl px-4">
                     <div class="row">
                         <div class="col-md-6 small">Derechos de Autor © Tu Website 2024</div>
