--- a/src/app/docente/listagrupo/listagrupo.component.html
+++ b/src/app/docente/listagrupo/listagrupo.component.html
@@ -261,15 +261,20 @@
                             <div class="row align-items-center justify-content-between pt-3">
                                 <div class="col-auto mb-3">
                                     <h1 class="page-header-title">
-                                        <div class="page-header-icon"><i data-feather="user"></i></div>
-                                        Lista de estudiantes
+                                        <div class="page-header-icon"><i data-feather="users"></i></div>
+                                        Lista de grupos
                                     </h1>
                                 </div>
                                 <div class="col-12 col-xl-auto mb-3">
-                                    <a class="btn btn-sm btn-light text-primary" href="/listaG">
-                                        <i class="me-1" data-feather="users"></i>
-                                        Gestionar grupos
+                                    <a class="btn btn-sm btn-light text-primary" href="/listaE">
+                                        <i class="me-1" data-feather="user"></i>
+                                        Lista de usuarios
                                     </a>
+                                    <button class="btn btn-sm btn-light text-primary" type="button"
+                                        data-bs-toggle="modal" data-bs-target="#createGroupModal">
+                                        <i class="me-1" data-feather="plus"></i>
+                                        Create New Group
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -282,71 +287,138 @@
                             <table id="datatablesSimple">
                                 <thead>
                                     <tr>
-                                        <th>User</th>
-                                        <th>Email</th>
-                                        <th>Role</th>
-                                        <th>Groups</th>
-                                        <th>Joined Date</th>
+                                        <th>Group Name</th>
+                                        <th>Total Members</th>
+                                        <th>Created Date</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
                                 <tfoot>
                                     <tr>
-                                        <th>User</th>
-                                        <th>Email</th>
-                                        <th>Role</th>
-                                        <th>Groups</th>
-                                        <th>Joined Date</th>
+                                        <th>Group Name</th>
+                                        <th>Total Members</th>
+                                        <th>Created Date</th>
                                         <th>Actions</th>
                                     </tr>
                                 </tfoot>
                                 <tbody>
                                     <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="avatar me-2"><img class="avatar-img img-fluid" src="assets/img/illustrations/profiles/profile-1.png" /></div>
-                                                Tiger Nixon
-                                            </div>
-                                        </td>
-                                        <td><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a7d3cec0c2d5e7c2cac6cecb89c4c8ca">[email&#160;protected]</a></td>
-                                        <td>Administrator</td>
-                                        <td>
-                                            <span class="badge bg-green-soft text-green">Sales</span>
-                                            <span class="badge bg-blue-soft text-blue">Developers</span>
-                                            <span class="badge bg-red-soft text-red">Marketing</span>
-                                            <span class="badge bg-purple-soft text-purple">Managers</span>
-                                            <span class="badge bg-yellow-soft text-yellow">Customer</span>
-                                        </td>
+                                        <td>Sales</td>
+                                        <td>8</td>
                                         <td>20 Jun 2021</td>
                                         <td>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="user-management-edit-user.html"><i data-feather="edit"></i></a>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i data-feather="trash-2"></i></a>
+                                            <button class="btn btn-datatable btn-icon btn-transparent-dark me-2"
+                                                type="button" data-bs-toggle="modal" data-bs-target="#editGroupModal"><i
+                                                    data-feather="edit"></i></button>
+                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i
+                                                    data-feather="trash-2"></i></a>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="avatar me-2"><img class="avatar-img img-fluid" src="assets/img/illustrations/profiles/profile-2.png" /></div>
-                                                Garrett Winters
-                                            </div>
-                                        </td>
-                                        <td><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="7d1a0a141309180f0e183d18101c1411531e1210">[email&#160;protected]</a></td>
-                                        <td>Administrator</td>
-                                        <td>
-                                            <span class="badge bg-green-soft text-green">Sales</span>
-                                            <span class="badge bg-blue-soft text-blue">Developers</span>
-                                            <span class="badge bg-red-soft text-red">Marketing</span>
-                                            <span class="badge bg-purple-soft text-purple">Managers</span>
-                                            <span class="badge bg-yellow-soft text-yellow">Customer</span>
-                                        </td>
+                                        <td>Developers</td>
+                                        <td>6</td>
                                         <td>20 Jun 2021</td>
                                         <td>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="user-management-edit-user.html"><i data-feather="edit"></i></a>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i data-feather="trash-2"></i></a>
+                                            <button class="btn btn-datatable btn-icon btn-transparent-dark me-2"
+                                                type="button" data-bs-toggle="modal" data-bs-target="#editGroupModal"><i
+                                                    data-feather="edit"></i></button>
+                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i
+                                                    data-feather="trash-2"></i></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Marketing</td>
+                                        <td>3</td>
+                                        <td>20 Jun 2021</td>
+                                        <td>
+                                            <button class="btn btn-datatable btn-icon btn-transparent-dark me-2"
+                                                type="button" data-bs-toggle="modal" data-bs-target="#editGroupModal"><i
+                                                    data-feather="edit"></i></button>
+                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i
+                                                    data-feather="trash-2"></i></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Managers</td>
+                                        <td>6</td>
+                                        <td>20 Jun 2021</td>
+                                        <td>
+                                            <button class="btn btn-datatable btn-icon btn-transparent-dark me-2"
+                                                type="button" data-bs-toggle="modal" data-bs-target="#editGroupModal"><i
+                                                    data-feather="edit"></i></button>
+                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i
+                                                    data-feather="trash-2"></i></a>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>Customer</td>
+                                        <td>10</td>
+                                        <td>20 Jun 2021</td>
+                                        <td>
+                                            <button class="btn btn-datatable btn-icon btn-transparent-dark me-2"
+                                                type="button" data-bs-toggle="modal" data-bs-target="#editGroupModal"><i
+                                                    data-feather="edit"></i></button>
+                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i
+                                                    data-feather="trash-2"></i></a>
                                         </td>
                                     </tr>
                                 </tbody>
                             </table>
+                        </div>
+                    </div>
+                </div>
+                <!-- Create group modal-->
+                <div class="modal fade" id="createGroupModal" tabindex="-1" role="dialog"
+                    aria-labelledby="createGroupModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="createGroupModalLabel">Create New Group</h5>
+                                <button class="btn-close" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="mb-0">
+                                        <label class="mb-1 small text-muted" for="formGroupName">Group Name</label>
+                                        <input class="form-control" id="formGroupName" type="text"
+                                            placeholder="Enter group name..." />
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button class="btn btn-danger-soft text-danger" type="button"
+                                    data-bs-dismiss="modal">Cancel</button>
+                                <button class="btn btn-primary-soft text-primary" type="button">Create New
+                                    Group</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Edit group modal-->
+                <div class="modal fade" id="editGroupModal" tabindex="-1" role="dialog"
+                    aria-labelledby="editGroupModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="editGroupModalLabel">Edit Group</h5>
+                                <button class="btn-close" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                <form>
+                                    <div class="mb-0">
+                                        <label class="mb-1 small text-muted" for="formGroupName">Group Name</label>
+                                        <input class="form-control" id="formGroupName" type="text"
+                                            placeholder="Enter group name..." value="Sales" />
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button class="btn btn-danger-soft text-danger" type="button"
+                                    data-bs-dismiss="modal">Cancel</button>
+                                <button class="btn btn-primary-soft text-primary" type="button">Save Changes</button>
+                            </div>
                         </div>
                     </div>
                 </div>
