--- a/src/app/docente/perfilprofesor/perfilprofesor.component.html
+++ b/src/app/docente/perfilprofesor/perfilprofesor.component.html
@@ -255,102 +255,114 @@
         <div id="layoutSidenav_content">
             <main>
                 <!--Aqui va lo que tendra el cuerpo de la pagina-->
+
                 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-4">
-                    <div class="container-fluid px-4">
+                    <div class="container-xl px-4">
                         <div class="page-header-content">
                             <div class="row align-items-center justify-content-between pt-3">
                                 <div class="col-auto mb-3">
                                     <h1 class="page-header-title">
-                                        <div class="page-header-icon"><i data-feather="user"></i></div>
-                                        Lista de estudiantes
+                                        <div class="page-header-icon">
+                                            <i data-feather="user"></i>
+                                        </div>
+                                        Configuración de la Cuenta - Perfil
                                     </h1>
-                                </div>
-                                <div class="col-12 col-xl-auto mb-3">
-                                    <a class="btn btn-sm btn-light text-primary" href="/listaG">
-                                        <i class="me-1" data-feather="users"></i>
-                                        Gestionar grupos
-                                    </a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </header>
                 <!-- Main page content-->
-                <div class="container-fluid px-4">
-                    <div class="card">
-                        <div class="card-body">
-                            <table id="datatablesSimple">
-                                <thead>
-                                    <tr>
-                                        <th>User</th>
-                                        <th>Email</th>
-                                        <th>Role</th>
-                                        <th>Groups</th>
-                                        <th>Joined Date</th>
-                                        <th>Actions</th>
-                                    </tr>
-                                </thead>
-                                <tfoot>
-                                    <tr>
-                                        <th>User</th>
-                                        <th>Email</th>
-                                        <th>Role</th>
-                                        <th>Groups</th>
-                                        <th>Joined Date</th>
-                                        <th>Actions</th>
-                                    </tr>
-                                </tfoot>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="avatar me-2"><img class="avatar-img img-fluid" src="assets/img/illustrations/profiles/profile-1.png" /></div>
-                                                Tiger Nixon
+                <div class="container-xl px-4 mt-4">
+                    <!-- Account page navigation-->
+                    <nav class="nav nav-borders">
+                        <a class="nav-link active ms-0" href="account-profile.html">Perfil</a>
+                        <a class="nav-link" href="account-security.html">Security</a>
+                    </nav>
+                    <hr class="mt-0 mb-4" />
+                    <div class="row">
+                        <div class="col-xl-4">
+                            <!-- Profile picture card-->
+                            <div class="card mb-4 mb-xl-0">
+                                <div class="card-header">Foto de Perfil</div>
+                                <div class="card-body text-center">
+                                    <!-- Profile picture image-->
+                                    <img class="img-account-profile rounded-circle mb-2" src="../assets/img/perfil.png"
+                                        alt="" />
+                                    <!-- Profile picture help block-->
+                                    <div class="small font-italic text-muted mb-4">JPG o PNG de no más de 5 MB</div>
+                                    <!-- Profile picture upload button-->
+                                    <button class="btn btn-primary" type="button">Subir nueva imagen</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-8">
+                            <!-- Account details card-->
+                            <div class="card mb-4">
+                                <div class="card-header">Detalles de la Cuenta</div>
+                                <div class="card-body">
+                                    <form>
+                                        <!-- Form Group (username)-->
+                                        <div class="mb-3">
+                                            <label class="small mb-1" for="inputUsername">Nombre de usuario (cómo
+                                                aparecerá tu nombre para
+                                                otros usuarios en el sitio)</label>
+                                            <input class="form-control" id="inputUsername" type="text"
+                                                placeholder="Ingrese su usuario" />
+                                        </div>
+                                        <!-- Form Row-->
+                                        <div class="row gx-3 mb-3">
+                                            <!-- Form Group (first name)-->
+                                            <div class="col-md-6">
+                                                <label class="small mb-1" for="inputFirstName">Nombre</label>
+                                                <input class="form-control" id="inputFirstName" type="text"
+                                                    placeholder="Ingrese su nombre" />
                                             </div>
-                                        </td>
-                                        <td><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="a7d3cec0c2d5e7c2cac6cecb89c4c8ca">[email&#160;protected]</a></td>
-                                        <td>Administrator</td>
-                                        <td>
-                                            <span class="badge bg-green-soft text-green">Sales</span>
-                                            <span class="badge bg-blue-soft text-blue">Developers</span>
-                                            <span class="badge bg-red-soft text-red">Marketing</span>
-                                            <span class="badge bg-purple-soft text-purple">Managers</span>
-                                            <span class="badge bg-yellow-soft text-yellow">Customer</span>
-                                        </td>
-                                        <td>20 Jun 2021</td>
-                                        <td>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="user-management-edit-user.html"><i data-feather="edit"></i></a>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i data-feather="trash-2"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <div class="d-flex align-items-center">
-                                                <div class="avatar me-2"><img class="avatar-img img-fluid" src="assets/img/illustrations/profiles/profile-2.png" /></div>
-                                                Garrett Winters
+                                            <!-- Form Group (last name)-->
+                                            <div class="col-md-6">
+                                                <label class="small mb-1" for="inputLastName">Apellido</label>
+                                                <input class="form-control" id="inputLastName" type="text"
+                                                    placeholder="Ingrese su apellido" />
                                             </div>
-                                        </td>
-                                        <td><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="7d1a0a141309180f0e183d18101c1411531e1210">[email&#160;protected]</a></td>
-                                        <td>Administrator</td>
-                                        <td>
-                                            <span class="badge bg-green-soft text-green">Sales</span>
-                                            <span class="badge bg-blue-soft text-blue">Developers</span>
-                                            <span class="badge bg-red-soft text-red">Marketing</span>
-                                            <span class="badge bg-purple-soft text-purple">Managers</span>
-                                            <span class="badge bg-yellow-soft text-yellow">Customer</span>
-                                        </td>
-                                        <td>20 Jun 2021</td>
-                                        <td>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark me-2" href="user-management-edit-user.html"><i data-feather="edit"></i></a>
-                                            <a class="btn btn-datatable btn-icon btn-transparent-dark" href="#!"><i data-feather="trash-2"></i></a>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
+                                        </div>
+
+                                        <!-- Form Group (email address)-->
+                                        <div class="mb-3">
+                                            <label class="small mb-1" for="inputEmailAddress">Dirección de correo
+                                                electrónico</label>
+                                            <input class="form-control" id="inputEmailAddress" type="email"
+                                                placeholder="Ingrese su correo electronico" />
+                                        </div>
+                                        <!-- Form Row-->
+                                        <div class="row gx-3 mb-3">
+                                            <!-- Form Group (phone number)-->
+                                            <div class="col-md-6">
+                                                <label class="small mb-1" for="inputPhone">Número de teléfono</label>
+                                                <input class="form-control" id="inputPhone" type="tel"
+                                                    placeholder="Ingrese su numero telefonico" />
+                                            </div>
+                                        </div>
+                                        <!-- Save changes button-->
+                                        <button class="btn btn-primary" type="button">Guardar cambios</button>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </main>
+            <footer class="footer-admin mt-auto footer-light">
+                <div class="container-xl px-4">
+                    <div class="row">
+                        <div class="col-md-6 small">Copyright © Your Website 2021</div>
+                        <div class="col-md-6 text-md-end small">
+                            <a href="#!">Privacy Policy</a>
+                            ·
+                            <a href="#!">Terms &amp; Conditions</a>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
     </div>
 </div>
