--- a/src/app/estudiante/dashboardestudiante/dashboardestudiante.component.html
+++ b/src/app/estudiante/dashboardestudiante/dashboardestudiante.component.html
@@ -76,8 +76,8 @@
           <h6 class="dropdown-header d-flex align-items-center">
             <img class="dropdown-user-img" src="../assets/img/perfil.png">
             <div class="dropdown-user-details">
-              <div class="dropdown-user-details-name">Karla Almea</div>
-              <div class="dropdown-user-details-email">kalmeavuteq.edu.ec</div>
+              <div class="dropdown-user-details-name">{{ usuario }}</div>
+              <div class="dropdown-user-details-email">{{ correo }}</div>
             </div>
           </h6>
           <div class="dropdown-divider"></div>
@@ -219,7 +219,7 @@
         <div class="sidenav-footer">
           <div class="sidenav-footer-content">
             <div class="sidenav-footer-subtitle">Logged in as:</div>
-            <div class="sidenav-footer-title">Valerie Luna</div>
+            <div class="sidenav-footer-title">{{ usuario }}</div>
           </div>
         </div>
       </nav>
