--- a/src/app/cuenta/login/login.component.html
+++ b/src/app/cuenta/login/login.component.html
@@ -43,7 +43,7 @@
                                         <!-- Caja de ingreso-->
                                         <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                             <a class="small" href="/recuperacion">¿Has olvidado tu contraseña?</a>
-                                            <button class="btn btn-primary" type="=submit">Ingreso</button>
+                                            <button class="btn btn-success" type="=submit">Ingreso</button>
                                         </div>
                                     </form>
                                 </div>
