--- a/src/app/cuenta/recuperarcontra/recuperarcontra.component.html
+++ b/src/app/cuenta/recuperarcontra/recuperarcontra.component.html
@@ -19,7 +19,7 @@
                                     <!-- Form Group (submit options)-->
                                     <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                                         <a class="small" href="/login">Volver al inicio de sesión</a>
-                                        <a class="btn btn-primary" href="/paginarecuperacion">Restablecer Contraseña</a>
+                                        <a class="btn btn-success" href="/paginarecuperacion">Restablecer Contraseña</a>
                                     </div>
                                 </form>
                             </div>
@@ -36,11 +36,11 @@
         <footer class="footer-admin mt-auto footer-light">
             <div class="container-xl px-4">
                 <div class="row">
-                    <div class="col-md-6 small">Copyright © Your Website 2021</div>
+                    <div class="col-md-6 small">Derechos de Autor © Tu Website 2024</div>
                     <div class="col-md-6 text-md-end small">
-                        <a href="#!">Privacy Policy</a>
+                        <a href="#!">Política de Privacidad</a>
                         ·
-                        <a href="#!">Terms &amp; Conditions</a>
+                        <a href="#!">Términos &amp; Condiciones</a>
                     </div>
                 </div>
             </div>
