--- a/src/app/docente/dashboarddocente/dashboarddocente.component.html
+++ b/src/app/docente/dashboarddocente/dashboarddocente.component.html
@@ -448,16 +448,16 @@
       </main>
       <footer class="footer-admin mt-auto footer-light">
         <div class="container-xl px-4">
-          <div class="row">
-            <div class="col-md-6 small">Copyright © Your Website 2021</div>
-            <div class="col-md-6 text-md-end small">
-              <a href="#!">Privacy Policy</a>
-              ·
-              <a href="#!">Terms &amp; Conditions</a>
+            <div class="row">
+                <div class="col-md-6 small">Derechos de Autor © Tu Website 2024</div>
+                <div class="col-md-6 text-md-end small">
+                    <a href="#!">Política de Privacidad</a>
+                    ·
+                    <a href="#!">Términos &amp; Condiciones</a>
+                </div>
             </div>
-          </div>
         </div>
-      </footer>
+    </footer>
     </div>
   </div>
 </div>
