--- a/src/app/docente/perfilprofesor/perfilprofesor.component.html
+++ b/src/app/docente/perfilprofesor/perfilprofesor.component.html
@@ -79,8 +79,8 @@
                     <h6 class="dropdown-header d-flex align-items-center">
                         <img class="dropdown-user-img" src="../assets/img/perfil.png">
                         <div class="dropdown-user-details">
-                            <div class="dropdown-user-details-name">Karla Almea</div>
-                            <div class="dropdown-user-details-email">kalmeavuteq.edu.ec</div>
+                            <div class="dropdown-user-details-name">{{ usuario }}</div>
+                            <div class="dropdown-user-details-email">{{ correo }}</div>
                         </div>
                     </h6>
                     <div class="dropdown-divider"></div>
@@ -245,8 +245,8 @@
                 <!-- Sidenav Footer-->
                 <div class="sidenav-footer">
                     <div class="sidenav-footer-content">
-                        <div class="sidenav-footer-subtitle">Logged in as:</div>
-                        <div class="sidenav-footer-title">Karla Almea</div>
+                        <div class="sidenav-footer-subtitle">Inició sesión como:</div>
+                        <div class="sidenav-footer-title">{{ usuario }}</div>
                     </div>
                 </div>
             </nav>
@@ -354,11 +354,11 @@
             <footer class="footer-admin mt-auto footer-light">
                 <div class="container-xl px-4">
                     <div class="row">
-                        <div class="col-md-6 small">Copyright © Your Website 2021</div>
+                        <div class="col-md-6 small">Derechos de Autor © Tu Website 2024</div>
                         <div class="col-md-6 text-md-end small">
-                            <a href="#!">Privacy Policy</a>
+                            <a href="#!">Política de Privacidad</a>
                             ·
-                            <a href="#!">Terms &amp; Conditions</a>
+                            <a href="#!">Términos &amp; Condiciones</a>
                         </div>
                     </div>
                 </div>
