--- a/src/app/estudiante/dashboardestudiante/dashboardestudiante.component.html
+++ b/src/app/estudiante/dashboardestudiante/dashboardestudiante.component.html
@@ -142,6 +142,26 @@
                 </path>
               </svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
             </a>
+            <!-- Sidenav Heading (Custom)-->
+            <div class="sidenav-menu-heading">Encuesta</div>
+            <!-- Sidenav Accordion (Pages)-->
+            <a class="nav-link" href="/encuesta">
+              <div class="nav-link-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                  stroke-linejoin="round" class="feather feather-bar-chart">
+                  <line x1="12" y1="20" x2="12" y2="10"></line>
+                  <line x1="18" y1="20" x2="18" y2="4"></line>
+                  <line x1="6" y1="20" x2="6" y2="16"></line>
+                </svg></div>
+              Encuesta de actitud
+              <div class="sidenav-collapse-arrow"><svg class="svg-inline--fa fa-angle-down" aria-hidden="true"
+                focusable="false" data-prefix="fas" data-icon="angle-down" role="img"
+                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" data-fa-i2svg="">
+                <path fill="currentColor"
+                  d="M169.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 274.7 54.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z">
+                </path>
+              </svg><!-- <i class="fas fa-angle-down"></i> Font Awesome fontawesome.com --></div>
+            </a>
             <!-- Sidenav Heading (UI Toolkit)-->
             <div class="sidenav-menu-heading">Proyectos</div>
             <!-- Sidenav Accordion (Layout)-->
@@ -218,7 +238,7 @@
         <!-- Sidenav Footer-->
         <div class="sidenav-footer">
           <div class="sidenav-footer-content">
-            <div class="sidenav-footer-subtitle">Logged in as:</div>
+            <div class="sidenav-footer-subtitle">Inició sesión como:</div>
             <div class="sidenav-footer-title">{{ usuario }}</div>
           </div>
         </div>
@@ -243,8 +263,9 @@
                 <div class="col-12 col-xl-auto mt-4">
                   <div class="input-group input-group-joined border-0" style="width: 16.5rem">
                     <span class="input-group-text"><i class="text-primary" data-feather="calendar"></i></span>
-                    <strong><input type="date" id="dateInput" [value]="currentDate"
-                        class="form-control ps-0 pointer"></strong>
+                    <strong>
+                      <input type="date" id="dateInput" [value]="currentDate" class="form-control ps-0 pointer">
+                    </strong>
                   </div>
                 </div>
               </div>
@@ -430,21 +451,19 @@
             </div>
           </div>
         </div>
-
-
       </main>
       <footer class="footer-admin mt-auto footer-light">
         <div class="container-xl px-4">
-          <div class="row">
-            <div class="col-md-6 small">Copyright © Your Website 2021</div>
-            <div class="col-md-6 text-md-end small">
-              <a href="#!">Privacy Policy</a>
-              ·
-              <a href="#!">Terms &amp; Conditions</a>
+            <div class="row">
+                <div class="col-md-6 small">Derechos de Autor © Tu Website 2024</div>
+                <div class="col-md-6 text-md-end small">
+                    <a href="#!">Política de Privacidad</a>
+                    ·
+                    <a href="#!">Términos &amp; Condiciones</a>
+                </div>
             </div>
-          </div>
         </div>
-      </footer>
+    </footer>
     </div>
   </div>
 </div>
