--- a/src/app/docente/listausuario/listausuario.component.html
+++ b/src/app/docente/listausuario/listausuario.component.html
@@ -88,7 +88,7 @@
                         <div class="dropdown-item-icon"><i class="fa-regular fa-gear"></i></div>
                         Perfil
                     </a>
-                    <a class="dropdown-item" href="/login">
+                    <a class="dropdown-item" (click)="clearLocalStorage()" href="/login">
                         <div class="dropdown-item-icon"><i class="fa-solid fa-right-from-bracket"></i></div>
                         Cerrar Sesión
                     </a>
